--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "browserify": "^14.4.0",
     "flux": "^3.1.2",
     "gulp": "^3.9.1",
+    "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
     "gulp-eslint": "^3.0.1",
     "gulp-open": "^2.0.0",
