--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "babelify": "^7.3.0",
     "browserify": "^14.4.0",
     "flux": "^3.1.2",
+    "foundation-sites": "^6.3.1",
     "gulp": "^3.9.1",
     "gulp-concat": "^2.6.1",
     "gulp-connect": "^5.0.0",
