--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
     "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1",
     "slurp-req": "^1.0.0",
     "vinyl-source-stream": "^1.1.0"
   },
